Fixed #4
Made navbar sub menus invisible until a
component classname has been added to give
it style.

--- a/sass/components/menu.scss
+++ b/sass/components/menu.scss
@@ -60,6 +60,13 @@ $share-menu-button-size: 2em;
       @include breakpoint(large) {
         @include menu-direction(horizontal);
       }
+
+      // Prevent FOUC on responsive menu
+      &:not(.drilldown):not(.dropdown) {
+        ul {
+          display: none;
+        }
+      }
     }
 
     .region.footer & {
